ENG-6842: Coordinate conveying sync snapshot sequence numbers