@@ -327,9 +327,9 @@ public class RejoinProducer extends JoinProducerBase {
 
                     drSequenceNumbers = event.drSequenceNumbers;
 
-                    for (Map.Entry<Integer, Pair<Long, Long>> e : event.remoteDCLastIds.get(0).entrySet()) {
-                        VoltDB.instance().getConsumerDRGateway().notifyOfLastAppliedBinaryLog(
-                                e.getKey(), e.getValue().getFirst(), e.getValue().getSecond());
+                    Pair<Long, Long> myDRIds = event.remoteDCLastIds.get(0).get(m_partitionId);
+                    if (myDRIds != null) {
+                        VoltDB.instance().getConsumerDRGateway().notifyOfLastAppliedBinaryLog(m_partitionId, myDRIds.getFirst(), myDRIds.getSecond());
                     }
 
                     REJOINLOG.debug(m_whoami + " monitor completed. Sending SNAPSHOT_FINISHED "
